[package]
name = "dummy_client"
version = "0.1.0"
edition = "2024"
authors = ["Victor chukwuemekavictor693@gmail.com"]
repository = "https://github.com/victorchukwuemeka/dummy_client"
description = "A learning-first Solana client written in Rust"
license = "MIT"


[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
rusqlite = "0.37.0"
bincode = "1.3"
rand = "0.8"
solana-sdk = "1.18"